CS_SBOX_20150209_01/Metadata/unpackaged/objects/fw1__Payment__c.object
<CustomObject>
    <fields>
        <fullName>Passed_to_GP__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Passed to GP</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Void_Passed_to_GP__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Created by LM on 11/4/2013 for Dave</description>
        <label>Void Passed to GP</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>fw1__API_Payment__c</fullName>
        <defaultValue>false</defaultValue>
        <label>API Payment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>fw1__AVS_Code__c</fullName>
        <label>AVS Code</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fw1__Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Payments</relationshipLabel>
        <relationshipName>Payments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>fw1__Additional_Payment_Method__c</fullName>
        <label>Additional Payment Method</label>
        <picklist>
            <picklistValues>
                <fullName>Cash</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wire Transfer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>fw1__Amount__c</fullName>
        <label>Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>fw1__Attach_Terms_And_Conditions__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Attach Terms And Conditions</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>fw1__Auto_BillPay__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Auto-BillPay</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>fw1__Bank_Aba_Code__c</fullName>
        <inlineHelpText>Bank Routing Number</inlineHelpText>
        <label>Bank ABA Code</label>
        <length>20</length>
        <maskChar>X</maskChar>
        <maskType>all</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>fw1__Bank_Account_Number__c</fullName>
        <label>Bank Account Number</label>
        <length>30</length>
        <maskChar>X</maskChar>
        <maskType>lastFour</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>fw1__Bank_Account_Type__c</fullName>
        <label>Bank Account Type</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fw1__Bank_Name__c</fullName>
        <label>Bank Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fw1__Billing_City__c</fullName>
        <label>Billing City</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fw1__Billing_Country__c</fullName>
        <label>Billing Country</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fw1__Billing_State__c</fullName>
        <label>Billing State</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fw1__Billing_Street__c</fullName>
        <label>Billing Street</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>fw1__Billing_Zip__c</fullName>
        <label>Billing Zip</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fw1__CVV2_Match__c</fullName>
        <label>CVV2 Match</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fw1__CVV2__c</fullName>
        <label>CVV2</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fw1__Company_Name__c</fullName>
        <label>Company Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fw1__Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Payments</relationshipLabel>
        <relationshipName>Payments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>fw1__Create_Token__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Create Token</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>fw1__Credit_Card_Number__c</fullName>
        <label>Credit Card Number</label>
        <length>19</length>
        <maskChar>X</maskChar>
        <maskType>creditCard</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>fw1__Credit_Card_Type__c</fullName>
        <label>Credit Card Type</label>
        <picklist>
            <picklistValues>
                <fullName>Visa</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MasterCard</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Discover</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Amex</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>fw1__Credit_Memo__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Credit Memo</label>
        <referenceTo>fw1__Credit_Memo__c</referenceTo>
        <relationshipLabel>Payments</relationshipLabel>
        <relationshipName>Payments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>fw1__Custom_Lookup_Field__c</fullName>
        <label>Custom Lookup Field</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fw1__Custom_Lookup_Object__c</fullName>
        <label>Custom Lookup Object</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fw1__Custom_Paid_Amount_Field__c</fullName>
        <label>Custom Paid Amount Field</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fw1__Domain_Name__c</fullName>
        <label>Domain Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fw1__Electronic_Signature__c</fullName>
        <label>Electronic Signature</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fw1__Email_Currency_Symbol__c</fullName>
        <label>Email Currency Symbol</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fw1__Email_Footer__c</fullName>
        <label>Email Footer</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>fw1__Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>fw1__Expiry_Month__c</fullName>
        <label>Expiry Month</label>
        <picklist>
            <picklistValues>
                <fullName>01</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>02</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>03</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>04</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>05</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>06</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>07</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>08</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>09</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>fw1__Expiry_Year__c</fullName>
        <label>Expiry Year</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fw1__First_Name__c</fullName>
        <label>First Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fw1__IP_Address__c</fullName>
        <label>IP Address</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fw1__Invoice__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Invoice</label>
        <referenceTo>fw1__Invoice__c</referenceTo>
        <relationshipLabel>Payments</relationshipLabel>
        <relationshipName>Payments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>fw1__Is_Pending_Settlement__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Pending Settlement</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>fw1__Last_Captured_Amount__c</fullName>
        <label>Last Captured Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>fw1__Last_Name__c</fullName>
        <label>Last Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fw1__Name_On_Account__c</fullName>
        <label>Name On Account</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fw1__Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Payments</relationshipLabel>
        <relationshipName>Payments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>fw1__PaymentSource__c</fullName>
        <label>PaymentSource</label>
        <picklist>
            <picklistValues>
                <fullName>Opportunity</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Account</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contact</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>fw1__Payment_Date__c</fullName>
        <label>Payment Date</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>fw1__Payment_Method__c</fullName>
        <label>Payment Method</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fw1__Payment_Processor__c</fullName>
        <label>Payment Processor</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fw1__Payment_Receipt_Email_Message__c</fullName>
        <label>Payment Receipt Email Message</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>fw1__Payment_Receipt_Email_Subject__c</fullName>
        <label>Payment Receipt Email Subject</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fw1__Payment_Recipient_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Payment Recipient Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Payments (Payment Recipient Account)</relationshipLabel>
        <relationshipName>Payments1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>fw1__Payment_Recipient_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Payment Recipient Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Payments (Payment Recipient Contact)</relationshipLabel>
        <relationshipName>Payments1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>fw1__Payment_Result__c</fullName>
        <label>Payment Result</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>fw1__Payment_To__c</fullName>
        <label>Payment To</label>
        <picklist>
            <picklistValues>
                <fullName>Account</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contact</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>fw1__Recurring_Invoice__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Recurring Invoice</label>
        <referenceTo>fw1__Recurring_Invoice__c</referenceTo>
        <relationshipLabel>Payments</relationshipLabel>
        <relationshipName>Payments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>fw1__Reference__c</fullName>
        <inlineHelpText>Other reference information, i.e. Check Number</inlineHelpText>
        <label>Reference</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fw1__Request_Token__c</fullName>
        <label>Request Token</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fw1__Shipping_City__c</fullName>
        <label>Shipping City</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fw1__Shipping_Country__c</fullName>
        <label>Shipping Country</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fw1__Shipping_State__c</fullName>
        <label>Shipping State</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fw1__Shipping_Street__c</fullName>
        <label>Shipping Street</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>fw1__Shipping_Zip__c</fullName>
        <label>Shipping Zip</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fw1__Status__c</fullName>
        <label>Status</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fw1__Terms_And_Conditions_ID__c</fullName>
        <label>Terms And Conditions ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fw1__Token_Display_Name__c</fullName>
        <label>Token Display Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fw1__Token__c</fullName>
        <label>Token</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fw1__Total_Captured_Amount__c</fullName>
        <label>Total Captured Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>fw1__Total_Paid_Amount__c</fullName>
        <description>This field contains the actual/net amount paid (i.e. minus refunds, voids, authorizations, etc.)</description>
        <formula>IF(OR(fw1__Payment_Method__c=&apos;Credit Card&apos;,fw1__Payment_Method__c=&apos;eCheck&apos;),  IF( fw1__Status__c  = &apos;Voided&apos;, 0,  fw1__Total_Captured_Amount__c  -  fw1__Total_Refunded_Amount__c),  fw1__Amount__c  -  fw1__Total_Refunded_Amount__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Paid Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>fw1__Total_Refunded_Amount__c</fullName>
        <label>Total Refunded Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>fw1__Transaction_ID__c</fullName>
        <label>Transaction ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fw1__Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Charge</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Authorization</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>fw1__User_Agent__c</fullName>
        <label>User Agent</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fw1__eCheck_Type__c</fullName>
        <label>eCheck Type</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <label>Payment</label>
    <listViews>
        <fullName>All_Payments</fullName>
        <columns>fw1__Account__c</columns>
        <columns>fw1__Opportunity__c</columns>
        <columns>NAME</columns>
        <columns>fw1__Type__c</columns>
        <columns>fw1__Amount__c</columns>
        <columns>fw1__Status__c</columns>
        <columns>fw1__Payment_Date__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>fw1__Payment_Date__c</field>
            <operation>greaterOrEqual</operation>
            <value>5/13/2013 12:00 AM</value>
        </filters>
        <label>All Payments</label>
    </listViews>
    <listViews>
        <fullName>SF_Payments_Not_Passed_to_GP</fullName>
        <columns>fw1__Payment_Date__c</columns>
        <columns>fw1__Account__c</columns>
        <columns>NAME</columns>
        <columns>fw1__Amount__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Passed_to_GP__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>fw1__Account__c</field>
            <operation>notEqual</operation>
            <value>Lisa Murer Test Account</value>
        </filters>
        <filters>
            <field>fw1__Status__c</field>
            <operation>notEqual</operation>
            <value>Refunded</value>
        </filters>
        <filters>
            <field>fw1__Status__c</field>
            <operation>notEqual</operation>
            <value>Voided</value>
        </filters>
        <label>SF Payments Not Passed to GP</label>
        <sharedTo>
            <group>Sys_Admin</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>fw1__All</fullName>
        <columns>fw1__Account__c</columns>
        <columns>fw1__Opportunity__c</columns>
        <columns>NAME</columns>
        <columns>fw1__Type__c</columns>
        <columns>fw1__Amount__c</columns>
        <columns>fw1__Status__c</columns>
        <columns>fw1__Payment_Date__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATEDBY_USER</field>
            <operation>equals</operation>
            <value>Web Payments Site Guest User</value>
        </filters>
        <filters>
            <field>CREATED_DATE</field>
            <operation>greaterOrEqual</operation>
            <value>5/13/2013 12:00 AM</value>
        </filters>
        <label>Payments by Clients</label>
    </listViews>
    <nameField>
        <label>Payment Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Payments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>fw1__CreditCard</fullName>
        <active>true</active>
        <description>Credit Card Invalid</description>
        <errorConditionFormula>AND (
OR (LEN( fw1__Credit_Card_Number__c ) &lt; 10, LEN( fw1__Credit_Card_Number__c ) &gt; 19),
LEN( fw1__Credit_Card_Number__c ) &gt; 0
)</errorConditionFormula>
        <errorDisplayField>fw1__Credit_Card_Number__c</errorDisplayField>
        <errorMessage>Credit Card Invalid</errorMessage>
    </validationRules>
</CustomObject>